--- a/json/projects.json
+++ b/json/projects.json
@@ -7,6 +7,8 @@
                 {
                     "year": 2021,
                     "month": 8,
+                    "day": 21,
+                    "item": "02",
                     "progress": "Present"
                 }
             ],
@@ -33,8 +35,8 @@
                     "action": "href=mailto:charlesmartinpascual@gmail.com",
                     "target": "self"
                 }
-            ]
-            
+            ],
+            "hidden": true
         },
         {
             "category": "App",
@@ -43,6 +45,8 @@
                 {
                     "year": 2024,
                     "month": 2,
+                    "day": "09",
+                    "item": "02",
                     "progress": "Present"
                 }
             ],
@@ -61,7 +65,8 @@
                     "action": "href=mailto:charlesmartinpascual@gmail.com",
                     "target": "self"
                 }
-            ]
+            ],
+            "hidden": true
             
         },
         {
@@ -163,7 +168,8 @@
                     "action": "href=https://privacy.gov.ph/data-privacy-act/",
                     "target": "_blank"
                 }
-            ]
+            ],
+            "hidden": true
         },
         {
             "category": "App",
@@ -172,10 +178,12 @@
                 {
                     "year": 2024,
                     "month": 2,
+                    "day": "00",
+                    "item": "01",
                     "progress": "Present"
                 }
             ],
-            "image": "../res/img/Coding Clipart.png",
+            "image": "../res/img/projects/notesForAndroid.png",
             "description": [
                 "Is currently being built on Android SDK with Java"
             ],
@@ -200,7 +208,8 @@
             ],
             "note": [
                 "<b>The code is closed-source and it is soon open for code request.</b>"
-            ]
+            ],
+            "hidden": true
         },
         {
             "category": "App",
@@ -218,7 +227,8 @@
             ],
             "note": [
                 "<b>The code is closed-source and it is soon open for code request.</b>"
-            ]
+            ],
+            "hidden": true
         },
         {
             "category": "App",
@@ -245,6 +255,8 @@
                 {
                     "year": 2021,
                     "month": 8,
+                    "day": "01",
+                    "item": "01",
                     "progress": "Present"
                 }
             ],
@@ -254,7 +266,8 @@
             ],
             "note": [
                 "<b>The code is closed-source and it is not open for code request.</b>"
-            ]
+            ],
+            "hidden": true
         },
         {
             "category": "Framework",
@@ -273,7 +286,8 @@
             ],
             "note": [
                 "<b>The code is closed-source and it is soon open for code request.</b>"
-            ]
+            ],
+            "hidden": true
         }
     ]
 }
