--- a/json/projects.json
+++ b/json/projects.json
@@ -36,7 +36,7 @@
                     "target": "self"
                 }
             ],
-            "hidden": true
+            "hidden": false
         },
         {
             "category": "App",
@@ -66,7 +66,7 @@
                     "target": "self"
                 }
             ],
-            "hidden": true
+            "hidden": false
             
         },
         {
@@ -169,7 +169,7 @@
                     "target": "_blank"
                 }
             ],
-            "hidden": true
+            "hidden": false
         },
         {
             "category": "App",
@@ -209,7 +209,7 @@
             "note": [
                 "<b>The code is closed-source and it is soon open for code request.</b>"
             ],
-            "hidden": true
+            "hidden": false
         },
         {
             "category": "App",
@@ -228,7 +228,7 @@
             "note": [
                 "<b>The code is closed-source and it is soon open for code request.</b>"
             ],
-            "hidden": true
+            "hidden": false
         },
         {
             "category": "App",
@@ -267,7 +267,7 @@
             "note": [
                 "<b>The code is closed-source and it is not open for code request.</b>"
             ],
-            "hidden": true
+            "hidden": false
         },
         {
             "category": "Framework",
@@ -287,7 +287,7 @@
             "note": [
                 "<b>The code is closed-source and it is soon open for code request.</b>"
             ],
-            "hidden": true
+            "hidden": false
         }
     ]
 }
