24w29a: Update content and fix white pixels on coding clipart.png

--- a/json/projects.json
+++ b/json/projects.json
@@ -1,7 +1,7 @@
 {
     "item": [
         {
-            "category": "Framework - Library",
+            "category": "Framework - Static Library",
             "title": "DzergeroEngine3D (Coming Soon)",
             "date": [
                 {
